# agentic-ai

./: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  BuildDesign.md  Dockerfile  Makefile  README.md  TESTING.md  debug_test.py  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  requirements-dev.in  requirements.in  setup-db.sh
.devcontainer_orig/: devcontainer.json
scripts/: test_services.sh  validate_docker.sh  validate_environment.sh
src/: agents.py  planning_agent.py  research_tools.py
src/your_project/: app.py
templates/: index.html
tests/: test_app.py  test_planning_agent.py
