[project]
name = "agentic-ai"
version = "0.1.0"
description = "Multi-agent AI research system with FastAPI, PostgreSQL, and reproducible dev environment"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ian Donaldson" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
